--- a/arch/arm64/configs/gts4llte_kali_defconfig
+++ b/arch/arm64/configs/gts4llte_kali_defconfig
@@ -571,11 +571,12 @@ CONFIG_SYSVIPC_COMPAT=y
 # CONFIG_SEC_GREATQLTE_PROJECT is not set
 # CONFIG_SEC_CRUISERLTE_PROJECT is not set
 # CONFIG_SEC_KELLYLTE_PROJECT is not set
-# CONFIG_SEC_GTS4LLTE_PROJECT is not set
-CONFIG_SEC_GTS4LWIFI_PROJECT=y
+CONFIG_SEC_GTS4LLTE_PROJECT=y
+# CONFIG_SEC_GTS4LWIFI_PROJECT is not set
 # CONFIG_MACH_GTS4LWIFI_SER is not set
 # CONFIG_MACH_GTS4LWIFI_ZC is not set
-CONFIG_MACH_GTS4LWIFI_XX=y
+# CONFIG_MACH_GTS4LWIFI_XX is not set
+CONFIG_MACH_GTS4LLTE_XX=y
 # CONFIG_MACH_GTS4LWIFI_XX_N08 is not set
 # CONFIG_MACH_GTS4LWIFI_XX_LDU is not set
 CONFIG_DRV_SAMSUNG=y
@@ -1450,7 +1451,7 @@ CONFIG_MUIC_S2MU004=y
 # CONFIG_HV_MUIC_S2MU004_AFC is not set
 # CONFIG_MUIC_S2MU004_ENABLE_AUTOSW is not set
 # CONFIG_MUIC_S2MU004_NON_USB_C_TYPE is not set
-# CONFIG_HICCUP_CHARGER is not set
+CONFIG_HICCUP_CHARGER=y
 # CONFIG_GPIO_UART_SEL is not set
 
 #
@@ -5366,7 +5367,7 @@ CONFIG_TRUSTONIC_TRUSTED_UI_QC=y
 CONFIG_SENSORS=y
 # CONFIG_SENSORS_SYSFS is not set
 # CONFIG_SENSORS_CM36672P_IRIS is not set
-# CONFIG_SENSORS_SX9320 is not set
+CONFIG_SENSORS_SX9320=y
 # CONFIG_SENSORS_SX9320_WIFI is not set
 # CONFIG_SENSORS_SX9320_WIFI_SUB is not set
 # CONFIG_SENSORS_SX9310 is not set
